build: replaced custom ui components with shadcnui components.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,8 @@
     "noUncheckedIndexedAccess": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@ui/": ["./src/components/ui/*"]
+      "@ui/": ["./src/components/ui/*"],
+      "@/*": ["./src/*"]
     },
     "plugins": [
       {
