--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.15.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@uidotdev/usehooks": "^2.0.1",
@@ -22,6 +24,7 @@
     "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.3",
     "tailwind-merge": "^1.13.0",
     "zod": "^3.21.4"
   },
